[B]Version 1.7.30[/B]

- Updated: eporner
- Fixed: video regex
- Updated: extremetube
- Fixed: video regex
- Updated: pornrabbit
- Fixed: categories
- Fixed: video regex
- Fixed: catcher


[B]Version 1.7.29[/B]

- Updated: youjizz
- Fixed: video regex


[B]Version 1.7.28[/B]

- prefixed broken sites with zz for future removal.


[B]Version 1.7.27[/B]

- Added: 4tube


[B]Version 1.7.26[/B]

- Cleanups for Eden


[B]Version 1.7.25[/B]

- Added: moviefap


[B]Version 1.7.24[/B]

- Updated: yuvutu
- Fixed: video regex
- Updated: fucktube
- Fixed: video regex
- Fixed: catcher
- Updated: pornhub
- Added: gay category


[B]Version 1.7.23[/B]

- Added: motherless


[B]Version 1.7.22[/B]

- Updated: eporner
- Fixed: catcher


[B]Version 1.7.21[/B]

- Added: book-mark.net


[B]Version 1.7.20[/B]

- Added: fapdu
- Added: youpunish
- Added: hardsextube


[B]Version 1.7.19[/B]

- Updated: pornhub
- Fixed: catcher
- Updated: pornotube
- Added: video length
- Updated: shufuni
- Fixed: titles (strip leading spaces)
- Updated: youporn
- Fixed: video listing
- Fixed: next button


[B]Version 1.7.18[/B]

- Updated: yuvutu
- Fixed: video listing
- Updated: ah-me
- Added: new links for long movies, top rated, most popular, HD


[B]Version 1.7.17[/B]

- Added: ah-me


[B]Version 1.7.16[/B]

- Updated: youporn
- Fixed: catcher


[B]Version 1.7.15[/B]

- Updated: youjizz
- Fixed: catcher


[B]Version 1.7.14[/B]

- Added: yuvutu
- Added: spankwire


[B]Version 1.7.13[/B]

- Updated: youporn
- Fixed: video url
- Fixed: catcher
- Updated: boysfood
- Fixed video url
- Fixed category
- Fixed catcher
- Fixed Search
- Updated: pornomovies
- Fixed: catcher


[B]Version 1.7.12[/B]

- Updated: eporner
- Fixed: catcher
- Fixed: video url
- Fixed: category


[B]Version 1.7.11[/B]

- Updated: timtube
- Fixed: catcher
- Fixed: video url


[B]Version 1.7.10[/B]

- Updated: redtube
- Fixed: catcher
- Fixed: category
- Fixed: next button
- Updated: youjizz
- Fixed: catcher


[B]Version 1.7.9[/B]
