@@ -114,7 +114,7 @@ url=%s
 quality=standard
 ########################################################
 title=youporn.com
-target='video_url'\s+: '([^']+)',
+target=<a href="([^"]+)">MP4
 url=%s
 action=decode
 header=Cookie|age_check=1
